<resources>
    <string name="app_name">FeedYourself</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_profile_image">Default_profile_image</string>
    <string name="default_user_name">user007</string>
    <string name="three_dot_menu">Three_dot_menu</string>
    <string name="Login">login</string>
    <string name="ClickToLogin">Click to login</string>
    <string name="ClickToRegister">Sign Up</string>
    <string name="client_id">700061135517-7ag69uo6rciln0liup4dmaus8mc38lv1.apps.googleusercontent.com</string>
    <string name="SignIn">Sign In to continue</string>
    <string name="SignUp">Sign Up to continue</string>
    <string name="Retrieve">Enter your email to retrieve password</string>
    <string name="Galley">Change Profile Photo</string>
    <string name="Camera">Take a Picture</string>
    <string name="searchBar">Get A Recipe Now</string>
    <string name="dummyText">333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333</string>

</resources>