<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FragmentLogin">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_main_nobg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back"
        android:textSize="35sp"
        android:fontFamily="@font/bungee"
        />


    <TextView
        android:text="@string/SignIn"
        android:textSize="16sp"
        android:layout_marginBottom="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgetPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:backgroundTint="@color/white"
            android:text="Forget Password?"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>


            <Button
                android:id="@+id/btn_to_register"
                android:text="@string/ClickToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>


        </LinearLayout>


        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign-in with google"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_google_login"
            android:padding="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>