<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/top_background_gradient"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="88dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_name"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:layout_marginLeft="16dp"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/top_background"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name">

        <!-- user info views here -->
    </LinearLayout>

    <ImageView
        android:id="@+id/three_dot_menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/three_dot_menu"
        android:src="@drawable/ic_dot_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email: "
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="36dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:srcCompat="@android:drawable/ic_menu_camera" />


    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Log Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_background" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:text="About FeedYourself"
        android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="@+id/logout_button"
        app:layout_constraintTop_toBottomOf="@+id/logout_button" />

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/about_button"
        app:layout_constraintBottom_toTopOf="@+id/nearby_grocery_button">

        <TextView
            android:id="@+id/about_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="Feed Yourself is a recipe Android application that allows users to find suitable dishes based on their available ingredients and additional needs, such as fitness or weight loss. With easy-to-follow steps, users can quickly make delicious meals that are tailored to their preferences." />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nearby_grocery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:text="Want Get Some Grocery Nearby?"
        android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="@+id/about_button"
        app:layout_constraintTop_toBottomOf="@+id/about_layout" />

    <LinearLayout
        android:id="@+id/nearby_grocery_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/nearby_grocery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
